# django-react-template

./: README.md
backend/: pyproject.toml
frontend/: .eslintrc.cjs  .prettierrc.json  jest.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
